# Master_Thesis

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: combined_queries_100.jsonl  master_csv_106.csv  parking_permit_sft_dataset.jsonl  rlhf_queries_50.jsonl  validation_qa.csv
src/: __init__.py  config.py
src/analysis/: __init__.py  optuna_analysis.py  training_analysis.py
src/data_processing/: __init__.py  preprocess.py
src/evaluation/: __init__.py  bar_plot.py  eval_sft_vs_ppo.py
src/inference/: __init__.py  run_inference.py
src/rlhf/: __init__.py  ablation.py  coherence.py  combine_datasets.py  constitution.py  generate_responses.py  hyperparam_opt.py  simulate_preferences.py  stats_tracker.py  train_ppo.py
src/rlhf/reward_model/: __init__.py  dataset.py  evaluate.py  model.py  train.py
src/sft/: __init__.py  train.py
src/utils/: __init__.py  io_utils.py  model_utils.py
